--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "gatsby-transformer-remark": "^1.7.44",
     "gatsby-transformer-sharp": "^1.6.27",
     "gatsby-transformer-yaml": "^1.5.18",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.11",
     "modern-normalize": "^0.5.0",
     "netlify-cms": "^1.9.3",
     "postcss-preset-env": "^5.1.0",
     "prop-types": "^15.6.0",
     "react": "^16.4.1",
+    "react-date-picker": "^7.4.0",
     "react-dom": "^16.4.1",
     "react-feather": "^1.1.6",
     "react-helmet": "^5.2.0",
+    "react-input-range": "^1.3.0",
     "react-markdown": "^3.3.2",
+    "react-rating": "^1.6.2",
+    "react-star-ratings": "^2.3.0",
     "react-twitter-embed": "^2.0.4",
     "rebass": "^3.0.1",
     "styled-components": "^4.1.3"
